--- a/emeateuve.css
+++ b/emeateuve.css
@@ -19,3 +19,12 @@
     width: 100%;
     height: 150px;
 }
+.footer {
+    position: absolute;
+    bottom: 0%;
+    background-color: darkcyan;
+    width: 100%;
+}
+.footer p{
+    margin-left:800px ;
+}
